# rust-contracts-stylus-erc-6909-ext

./: Cargo.toml
.github/workflows/: check-abi.yml  check-publish.yml  check-wasm.yml  check.yml  e2e-tests.yml  gas-bench.yml  test.yml
benches/src/: erc6909.rs  erc6909_supply.rs  lib.rs
contracts/src/token/erc6909/: mod.rs
contracts/src/token/erc6909/extensions/: content_uri.rs  metadata.rs  mod.rs  supply.rs
docs/modules/ROOT/pages/: erc6909-supply.adoc  erc6909.adoc  tokens.adoc
examples/erc6909/: Cargo.toml
examples/erc6909-supply/: Cargo.toml
examples/erc6909-supply/src/: lib.rs
examples/erc6909-supply/tests/: erc6909-supply.rs
examples/erc6909-supply/tests/abi/: mod.rs
examples/erc6909/src/: lib.rs
examples/erc6909/tests/: erc6909.rs
examples/erc6909/tests/abi/: mod.rs
scripts/: bench.sh  e2e-tests.sh
