[package]
name = "erc6909-supply-example"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus.workspace = true
stylus-sdk.workspace = true

[lints]
workspace = true

[features]
e2e = []
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "erc6909-supply-example"
path = "src/main.rs"
